asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__fetch__fetch_from_elsewhere_prompt.snap
---
source: asyncgit/src/lib/tui/git/tests/fetch.rs
assertion_line: 5
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Select remote: ›                                                              |
styles_hash: a2a72e20bfcc2997
